--- a/Views/Css/Global.css
+++ b/Views/Css/Global.css
@@ -1,22 +1,209 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .Encabezado{
+    background-image: url(../Img/playalnda.avif);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    position: relative;
+    min-height: 100vh;
+    align-items: center;
+}
+
+.menu{
+    position: absolute ;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    text-decoration: dotted;
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.menu .navbar ul li {
+    position: relative;
+    float: left;
+}
+.menu .navbar ul li a {
+    text-decoration: dashed;
+    font-size: 18px;
+    padding: 20px;
+    color: #ffffff;
+    display: block;
+    font-weight: bold;
+}
+
+.menu .navbar ul li a:hover {
+    color: #266371;
+}
+
+.icons{
+    display: flex;
+}
+.icons i {
+    font-size: 25px;
+    color: #ffffff;
+    margin-right:  15px;
+    cursor: pointer;
+}
+
+.icons i:hover{
+    color: #266371;
+}
+
+#menu{
+    display: none;
+}
+
+.menu-icono{
+    width: 25px;
+}
+
+.menu label{
+    cursor: pointer;
+    display: none;
+
+}
+.header-txt{
+    width: 40%;
+}
+
+.header-txt h1{
+    font-size: 60px;
+    line-height: 80px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #6cace4;
+    margin-bottom: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.header-txt p{
+    font-size: 18px;
+    color: #ffffff;
+    font-weight: 500;
+    margin-bottom: 25px;
+}
+
+.btn-1{
+    display: inline-block;
+    padding: 13px 20px;
+    border-radius: 25px;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #266371;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.btn-1:hover{
+    background-color: #266371;
+
+}
+.images{
+    width: 750px;
+    height: 380px;
+    position: absolute;
+    right: 0;
+    margin-right: -50px;
+}
+
+.swiper{
+    width: 100%;
+    height: 100%;
+}
+.swiper-wrapper{
 
 
 }
+.my-swiper .navigation{
+    border: solid 1px red;
+}
 
-.Cuerpo{
+.swiper-slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
 
+.swiper-slide h3{
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    color: #ffffff;
+    font-family:'Roboto Condensed', sans-serif;
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.swiper-slide img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.fila{
+    width: 180px;
+    position: absolute;
+    right: 620px;
+    top: 520px;
+    transform: translate(210%, 20px);
+}
+
+.swiper-button-prev{
+    height: 50px;
+    width: 50px;
+    border: 2px solid #266371;
+    border-radius: 50%;
+    font-size: 15px;
 
 }
 
-.Pie{
-
-    
-
+.swiper-button-next{
+    height: 50px;
+    width: 50px;
+    border: 2px solid #266371;
+    border-radius: 50%;
+    font-size: 15px;
 }
+
+.swiper-button-prev::after{
+    font-size: 25px;
+    color: #266371;
+}
+.swiper-button-next::after{
+    font-size: 25px;
+    color: #266371;
+}
+
