--- a/Views/Css/Global.css
+++ b/Views/Css/Global.css
@@ -12,14 +12,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     max-width: 100vw;
     overflow: hidden;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.Encabezado{
     background-image: url(../Img/playalnda.avif);
     background-position: center center;
     background-repeat: no-repeat;
@@ -31,7 +23,7 @@ body{
     align-items: center;
 }
 
-.menu{
+.Menu{
     position: absolute ;
     top: 0;
     left: 0;
@@ -41,6 +33,11 @@ body{
     justify-content: space-between;
 }
 
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 .logo{
     text-decoration: dotted;
     color: #ffffff;
@@ -48,11 +45,11 @@ body{
     font-weight: bold;
 }
 
-.menu .navbar ul li {
+.Menu .navbar ul li {
     position: relative;
     float: left;
 }
-.menu .navbar ul li a {
+.Menu .navbar ul li a {
     text-decoration: dashed;
     font-size: 18px;
     padding: 20px;
@@ -61,7 +58,7 @@ body{
     font-weight: bold;
 }
 
-.menu .navbar ul li a:hover {
+.Menu .navbar ul li a:hover {
     color: #266371;
 }
 
@@ -79,19 +76,21 @@ body{
     color: #266371;
 }
 
-#menu{
+#Menu{
     display: none;
 }
 
-.menu-icono{
+.Menu-icono{
     width: 25px;
 }
 
-.menu label{
+.Menu label{
     cursor: pointer;
     display: none;
 
 }
+
+
 .header-txt{
     width: 40%;
 }
@@ -111,6 +110,7 @@ body{
     color: #ffffff;
     font-weight: 500;
     margin-bottom: 25px;
+    
 }
 
 .btn-1{
@@ -122,6 +122,7 @@ body{
     background-color: #266371;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     font-family: 'Roboto Condensed', sans-serif;
+
 }
 
 .btn-1:hover{
@@ -132,20 +133,15 @@ body{
     width: 750px;
     height: 380px;
     position: absolute;
-    right: 0;
-    margin-right: -50px;
+    right: -40px;
+    bottom: 120px;
+
 }
 
 .swiper{
     width: 100%;
     height: 100%;
-}
-.swiper-wrapper{
 
-
-}
-.my-swiper .navigation{
-    border: solid 1px red;
 }
 
 .swiper-slide{
